# duet

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  TODOS.md  index.html  metrics.md  package.json
scripts/: backfill_coaching.py  backfill_moments.py  backfill_speakers.py  cleanup_other_speakers.py  fix_moment_transcripts.py
sidecar/: pyproject.toml
sidecar/duet_sidecar/: audio_analyzer.py  clip_extractor.py  coach.py  doc_parser.py  main.py  nlp_analysis.py  speech_analyzer.py  transcription.py  tts.py  voice.py  warmup.py
sidecar/tests/: test_doc_parser.py  test_nlp_analysis.py
src/: App.tsx  main.tsx  styles.css  theme.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  sidecar.rs
src/components/: AudioPlayer.tsx  DeleteConfirmation.tsx  PracticeDrills.tsx  StartSessionButton.tsx
src/lib/: recorder.ts
src/screens/: CoachScreen.tsx  DashboardScreen.tsx  RecordingsScreen.tsx  SessionDetailScreen.tsx  SettingsScreen.tsx  StudyPlanScreen.tsx
